--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:gravity="bottom"
-    app:umanoDragView="@+id/drag_view"
+    android:id="@+id/sliding_layout"
+    app:umanoScrollableView="@+id/playing_list"
+    app:umanoParallaxOffset="100dp"
     app:umanoPanelHeight="?attr/actionBarSize">
     <!-- Main content -->
     <android.support.design.widget.CoordinatorLayout
@@ -37,56 +39,18 @@
             android:background="@color/windowBackground"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginEnd="20dp"
-            android:clickable="true"
-            android:elevation="12dp"
-            android:src="@drawable/ic_audiotrack"
-            app:backgroundTint="@color/colorAccent"
-            app:layout_anchor="@+id/main_viewpager"
-            app:layout_anchorGravity="bottom|end" />
-
     </android.support.design.widget.CoordinatorLayout>
 
     <!-- Sliding Panel -->
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
         android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            android:id="@+id/drag_view"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true"
-                app:srcCompat="@drawable/ic_expand_up"/>
 
-            <ImageView
-                android:id="@+id/player_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/unbounded_ripple"
-                android:drawSelectorOnTop="true"
-                android:layout_centerVertical="true"
-                android:padding="16dp"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_play"
-                android:contentDescription="@string/play" />
-        </RelativeLayout>
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="vertical"
             android:layout_height="match_parent">
             <ImageView
                 android:layout_width="match_parent"
@@ -99,38 +63,142 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorAccent"
-                android:layout_below="@id/album_art">
-                <ImageView
-                    android:id="@+id/player_rewind"
+                android:id="@+id/control_holder">
+
+                <TextView
+                    android:id="@+id/player_current_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:padding="16dp"
+                    android:clipToPadding="false"
+                    android:layout_alignParentStart="true"
+                    android:text="@string/default_duration"
+                    android:layout_alignParentTop="true"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/player_total_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:padding="16dp"
+                    android:clipToPadding="false"
+                    android:text="@string/default_duration"
+                    android:layout_alignParentTop="true"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp" />
+
+                <SeekBar
+                    android:id="@+id/player_seekbar"
+                    android:layout_width="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_toStartOf="@id/player_total_time"
+                    android:padding="16dp"
+                    android:layout_toEndOf="@id/player_current_time"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:progressTint="#FFFFFF"
+                    android:thumbTint="#FFFFFF" />
+
+                <ImageView
+                    android:id="@+id/player_play"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
                     android:background="@drawable/unbounded_ripple"
                     android:drawSelectorOnTop="true"
-                    android:padding="16dp"
+                    android:layout_below="@id/player_seekbar"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="16dp"
+                    android:padding="2dp"
+                    android:src="@drawable/ic_play"
+                    android:contentDescription="@string/play" />
+
+                <ImageView
+                    android:id="@+id/player_rewind"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
+                    android:background="@drawable/unbounded_ripple"
+                    android:drawSelectorOnTop="true"
+                    android:layout_below="@id/player_seekbar"
+                    android:layout_toStartOf="@id/player_play"
+                    android:layout_margin="16dp"
+                    android:padding="2dp"
                     android:src="@drawable/ic_skip_previous"
                     android:contentDescription="@string/rewind" />
 
                 <ImageView
                     android:id="@+id/player_forward"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="42dp"
+                    android:layout_height="42dp"
                     android:background="@drawable/unbounded_ripple"
+                    android:layout_toEndOf="@id/player_play"
                     android:drawSelectorOnTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:padding="16dp"
+                    android:layout_margin="16dp"
+                    android:padding="2dp"
+                    android:layout_below="@id/player_seekbar"
                     android:src="@drawable/ic_skip_next"
                     android:contentDescription="@string/fast_forward" />
 
-                <SeekBar
-                    android:layout_width="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_toStartOf="@id/player_forward"
-                    android:layout_toEndOf="@id/player_rewind"
-                    android:layout_height="wrap_content"
-                    android:progressTint="#FFFFFF"
-                    android:thumbTint="#FFFFFF" />
             </RelativeLayout>
 
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/playing_list"/>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            android:id="@+id/drag_view"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/expand_toolbar"
+                app:srcCompat="@drawable/ic_expand_up"/>
+
+            <ImageView
+                android:id="@+id/player_play_toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/unbounded_ripple"
+                android:drawSelectorOnTop="true"
+                android:layout_centerVertical="true"
+                android:padding="16dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_play"
+                android:contentDescription="@string/play" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@id/player_play_toolbar"
+                android:layout_centerVertical="true"
+                android:orientation="vertical"
+                android:layout_toEndOf="@id/expand_toolbar">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:id="@+id/song_name_toolbar"
+                    android:textColor="@android:color/primary_text_dark"
+                    android:text="Song name" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:id="@+id/song_desc_toolbar"
+                    android:textColor="@android:color/secondary_text_dark"
+                    android:text="Song artist" />
+            </LinearLayout>
         </RelativeLayout>
-    </LinearLayout>
+    </FrameLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
