--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -154,7 +154,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            android:id="@+id/drag_view"
+            android:id="@+id/mini_controller"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="wrap_content"
