Use a circle drawable for player play/pause

--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -21,7 +21,7 @@
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
                 <ImageView
-                    android:id="@+id/activity_album_art"
+                    android:id="@+id/album_art"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
@@ -45,7 +45,7 @@
                     android:layout_height="92dp"
                     android:background="@color/colorPrimary"
                     android:layout_gravity="bottom"
-                    android:layout_alignBottom="@id/activity_album_art"
+                    android:layout_alignBottom="@id/album_art"
                     app:layout_collapseMode="pin"/>
 
                 <android.support.v7.widget.Toolbar
