--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -168,15 +168,15 @@
 
                 <ImageView
                     android:id="@+id/player_play"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
                     android:background="@drawable/unbounded_ripple"
                     android:drawSelectorOnTop="true"
                     android:layout_below="@id/player_seekbar"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="16dp"
                     android:padding="2dp"
-                    android:src="@drawable/ic_play"
+                    android:src="@drawable/ic_play_circle"
                     android:contentDescription="@string/play" />
 
                 <ImageView
@@ -187,7 +187,10 @@
                     android:drawSelectorOnTop="true"
                     android:layout_below="@id/player_seekbar"
                     android:layout_toStartOf="@id/player_play"
-                    android:layout_margin="16dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:padding="2dp"
                     android:src="@drawable/ic_skip_previous"
                     android:contentDescription="@string/rewind" />
@@ -199,7 +202,10 @@
                     android:background="@drawable/unbounded_ripple"
                     android:layout_toEndOf="@id/player_play"
                     android:drawSelectorOnTop="true"
-                    android:layout_margin="16dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:padding="2dp"
                     android:layout_below="@id/player_seekbar"
                     android:src="@drawable/ic_skip_next"
@@ -210,9 +216,12 @@
                     android:layout_width="42dp"
                     android:layout_height="42dp"
                     android:background="@drawable/unbounded_ripple"
-                    android:layout_toEndOf="@id/player_forward"
+                    android:layout_alignParentEnd="true"
                     android:drawSelectorOnTop="true"
-                    android:layout_margin="16dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:padding="2dp"
                     android:layout_below="@id/player_seekbar"
                     android:src="@drawable/ic_shuffle"
@@ -223,9 +232,12 @@
                     android:layout_width="42dp"
                     android:layout_height="42dp"
                     android:background="@drawable/unbounded_ripple"
-                    android:layout_toStartOf="@id/player_rewind"
+                    android:layout_alignParentStart="true"
                     android:drawSelectorOnTop="true"
-                    android:layout_margin="16dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:padding="2dp"
                     android:layout_below="@id/player_seekbar"
                     android:src="@drawable/ic_repeat_all"
