--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -18,7 +18,7 @@
             android:elevation="10dp"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:contentScrim="@color/colorPrimary"
+            app:contentScrim="@color/color_primary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
                 <ImageView
                     android:id="@+id/album_art"
@@ -43,7 +43,7 @@
                     android:id="@+id/title_background"
                     android:layout_width="match_parent"
                     android:layout_height="92dp"
-                    android:background="@color/colorPrimary"
+                    android:background="@color/color_primary"
                     android:layout_gravity="bottom"
                     android:layout_alignBottom="@id/album_art"
                     app:layout_collapseMode="pin"/>
@@ -64,10 +64,10 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:clipToPadding="false"
-        android:background="@color/windowBackground"
+        android:background="@color/window_background"
         android:numColumns="auto_fit"
-        app:fastScrollThumbColor="@color/colorAccent"
-        app:fastScrollPopupBgColor="@color/colorAccent"
+        app:fastScrollThumbColor="@color/color_accent"
+        app:fastScrollPopupBgColor="@color/color_accent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
@@ -79,7 +79,7 @@
         android:clickable="true"
         android:elevation="12dp"
         android:src="@drawable/ic_play"
-        app:backgroundTint="@color/colorAccent"
+        app:backgroundTint="@color/color_accent"
         app:borderWidth="0dp"
         app:layout_anchor="@id/appbar_album"
         app:layout_anchorGravity="bottom|end" />
