--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -12,9 +12,9 @@
         android:columnWidth="150dp"
         android:gravity="center"
         android:padding="4dp"
-        android:background="@color/windowBackground"
-        app:fastScrollThumbColor="@color/colorAccent"
-        app:fastScrollPopupBgColor="@color/colorAccent"
+        android:background="@color/window_background"
+        app:fastScrollThumbColor="@color/color_accent"
+        app:fastScrollPopupBgColor="@color/color_accent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"
         android:clipToPadding="false"
         android:numColumns="auto_fit"
