--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -11,9 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:background="@color/windowBackground"
-        app:fastScrollThumbColor="@color/colorAccent"
-        app:fastScrollPopupBgColor="@color/colorAccent"
+        android:background="@color/window_background"
+        app:fastScrollThumbColor="@color/color_accent"
+        app:fastScrollPopupBgColor="@color/color_accent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"/>
 
 </RelativeLayout>
