--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -13,13 +13,21 @@
         android:gravity="center"
         android:padding="4dp"
         android:background="@color/window_background"
-        app:fastScrollThumbColor="@color/color_accent"
-        app:fastScrollPopupBgColor="@color/color_accent"
+        app:fastScrollThumbColor="@color/colorAccent"
+        app:fastScrollPopupBgColor="@color/colorAccent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"
         android:clipToPadding="false"
         android:numColumns="auto_fit"
         android:horizontalSpacing="4dp"
         android:verticalSpacing="4dp"
         android:stretchMode="columnWidth" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:id="@+id/no_albums"
+        android:text="@string/no_albums"/>
 
 </RelativeLayout>
