--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -12,8 +12,16 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:background="@color/window_background"
-        app:fastScrollThumbColor="@color/color_accent"
-        app:fastScrollPopupBgColor="@color/color_accent"
+        app:fastScrollThumbColor="@color/colorAccent"
+        app:fastScrollPopupBgColor="@color/colorAccent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:id="@+id/no_artists"
+        android:text="@string/no_artists"/>
 
 </RelativeLayout>
