--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/window_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
@@ -11,9 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:background="@color/window_background"
-        app:fastScrollThumbColor="@color/color_accent"
-        app:fastScrollPopupBgColor="@color/color_accent"
+        app:fastScrollThumbColor="@color/colorAccent"
+        app:fastScrollPopupBgColor="@color/colorAccent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:id="@+id/no_songs"
+        android:text="@string/no_songs"/>
 
 </RelativeLayout>
