--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="color_primary">#3E4147</color>
-    <color name="color_primary_dark">#2A2C31</color>
-    <color name="color_accent">#FFD50000</color>
-    <color name="card_background">@color/color_accent</color>
+    <color name="colorPrimary">#3E4147</color>
+    <color name="colorPrimaryDark">#2A2C31</color>
+    <color name="colorAccent">#FFD50000</color>
+    <color name="card_background">@color/colorAccent</color>
     <color name="window_background">#FFFAFAFA</color>
     <color name="album_title_text">@android:color/primary_text_dark</color>
     <color name="album_desc_text">@android:color/secondary_text_dark</color>
