--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -12,7 +12,7 @@
         android:columnWidth="150dp"
         android:gravity="center"
         android:padding="4dp"
-        android:background="@color/window_background"
+        android:background="@color/windowBackground"
         app:fastScrollThumbColor="@color/colorAccent"
         app:fastScrollPopupBgColor="@color/colorAccent"
         app:fastScrollPopupTextColor="@android:color/primary_text_dark"
