--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="68dp"
             android:padding="16dp"
-            android:background="@color/card_background"
+            android:background="@color/cardBackground"
             android:id="@+id/text_holder">
             <TextView
                 android:id="@+id/grid_name"
@@ -37,7 +37,7 @@
                 android:maxLines="1"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:textColor="@color/album_title_text"
+                android:textColor="@color/primaryTextLight"
                 android:textSize="16sp"
                 android:ellipsize="end"/>
 
@@ -48,7 +48,7 @@
                 android:maxLines="1"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
-                android:textColor="@color/album_desc_text"
+                android:textColor="@color/secondaryTextLight"
                 android:textSize="12sp"
                 android:ellipsize="end"/>
         </RelativeLayout>
