Bring dark theme to playing list, settings, about (although not complete), search * Also add a colour navigation bar option * Performance seems fine as of now, still needs more testing

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -7,7 +7,12 @@
         <android.support.v7.preference.SwitchPreferenceCompat
             android:key="dark_theme"
             android:title="Dark Theme"
-            android:summary="EXPERIMENTAL"
+            android:defaultValue="false" />
+
+        <android.support.v7.preference.SwitchPreferenceCompat
+            android:key="colour_navbar"
+            android:title="Coloured navigation bar"
+            android:summary="Tints the navigation bar to the colour of the status bar"
             android:defaultValue="false" />
 
     </android.support.v7.preference.PreferenceCategory>
