--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,33 +2,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v7.preference.PreferenceCategory
-        android:title="Appearance">
+        android:title="@string/appearance">
 
         <android.support.v7.preference.SwitchPreferenceCompat
             android:key="dark_theme"
-            android:title="Dark Theme"
+            android:title="@string/dark_mode"
             android:defaultValue="false" />
 
         <android.support.v7.preference.SwitchPreferenceCompat
             android:key="colour_navbar"
-            android:title="Coloured navigation bar"
-            android:summary="Tints the navigation bar to the colour of the status bar"
+            android:title="@string/colour_navbar"
+            android:summary="@string/colour_navbar_summary"
             android:defaultValue="false" />
-
-        <android.support.v7.preference.Preference
-            android:key="primary_colour"
-            android:title="Primary colour"
-            android:summary="Sets the apps primary colour" />
 
     </android.support.v7.preference.PreferenceCategory>
 
     <android.support.v7.preference.PreferenceCategory
-        android:title="Advanced">
+        android:title="@string/lock_screen">
+
+        <android.support.v7.preference.SwitchPreferenceCompat
+            android:key="lock_screen_art"
+            android:title="@string/lock_screen_art"
+            android:summary="@string/lock_screen_art_summary"
+            android:defaultValue="true" />
+    </android.support.v7.preference.PreferenceCategory>
+
+    <android.support.v7.preference.PreferenceCategory
+        android:title="@string/advanced">
 
         <android.support.v7.preference.Preference
             android:key="reset_app"
-            android:title="Reset the apps data"
-            android:summary="Equivalent to wiping the apps data from settings" />
+            android:title="@string/reset_app"
+            android:summary="@string/reset_app_summary" />
 
     </android.support.v7.preference.PreferenceCategory>
 
